# baseball-analysis-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/experiments/: gvhmr_benchmark_baseball_1.yaml  gvhmr_suzhou_test.yaml
docs/: 3d_extension_plan.md
docs/srs_2d_pose_model_package/: MODEL_CARD.md  README.md
scripts/: build_gvhmr_input_from_frames.py  export_gvhmr_joints.py
src/baseball_pose/: __init__.py  cli.py  config.py
src/baseball_pose/features3d/: __init__.py  extraction.py
src/baseball_pose/io/: __init__.py  frame_csv.py  metadata.py  paths.py  pose3d_csv.py  pose_csv.py  video.py
src/baseball_pose/pipeline/: __init__.py  overlays3d.py  pose3d.py  postprocess3d.py
src/baseball_pose/pose/: __init__.py  quality.py  schema.py
src/baseball_pose/pose3d/: __init__.py  base.py  external_video_hmr.py  schema.py  stub_lifter.py
src/baseball_pose/postprocess/: __init__.py  smoothing3d.py
src/baseball_pose/srs2d/: __init__.py  extractor.py  pipeline.py
src/baseball_pose/visualization3d/: __init__.py  overlays.py  plots.py
tests/: test_external_video_hmr.py  test_pose3d_plan.py  test_smoothing3d.py  test_srs2d_adapter.py
